solved layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -37,24 +37,22 @@ h3{
 }
 .quotes{
   display: flex;
-  justify-content: center;
-  align-items:center;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   gap: 10px;
   margin: 3rem;
 }
 .quote{
-  /* margin: 5px; */
-  /* border-style: dashed; */
   background-color: #494F55;
   border-radius: 12px;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 10px 5px;
-  
+  padding: 10px 0;
 }
+
 .dont {
   display: flex;
   align-items: center;
@@ -122,7 +120,7 @@ hr{
   justify-content: center;
   align-items: center;
   flex-direction: column;
-
+  padding: 3rem 0;
   background-color: #a8FF35;
 }
 .follow h1{
@@ -132,12 +130,9 @@ hr{
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 1.5  rem 0;
 }
-.icons img{
-  height: fit-content;
-  width: fit-content;
-  
-}
+
 #datebutton{
   width: 100%;
   background-color: white;
@@ -225,8 +220,25 @@ nav{
 .hamburger{
   display: none;
 }
-@media only screen and (max-width:750) {
-  nav{
+
+
+.icons{
+  display: flex;
+  align-items: center;  
+  justify-content: center;
+}
+
+.icon-container{
+  width: 50px;
+}
+
+.social-media{
+  width: calc(100% - 30px);
+  object-fit: contain;
+}
+
+@media  screen and (max-width:750px) {
+  .navbar{
     background-color: green;
   }
 }
